Chips Widget: 1. Single call is made to get default values. 2. Resolved flickering issue of chips when paginated dataset is changed. 3. in search widget if comma separated vales are given as dataset then the individual values are not trimmed.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1013,9 +1013,9 @@ html, body {
       }
       &.chip-picture {
         img {
-          width: 32px;
-          height: 32px;
-          margin-top: -7px;
+          width: 31px;
+          height: 31px;
+          margin-top: -6.5px;
           margin-left: -13px;
           border-radius: 16px;
           padding-right: 3px;
